tests/invalid/cycle_link_a.h
#ifndef CYCLE_LINK_A_H
#define CYCLE_LINK_A_H
#include "cycle_link_b.h"
#endif
